# fastapi-rag-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
api/: routes.py
core/: config.py  exceptions.py  security.py
models/: schemas.py
services/: document_service.py  qa_service.py
